Fix sidebar bug (collapsing on active item) & Fix wrong yml syntax in .md files

--- a/less/doc-thelia/sidebar.less
+++ b/less/doc-thelia/sidebar.less
@@ -55,9 +55,7 @@
 
 /* Show and affix the side nav when space allows it */
 @media (min-width: 992px) {
-  .thelia-sidebar .nav > .active > ul {
-    display: block;
-  }
+
   /* Widen the fixed sidebar */
   .thelia-sidebar.affix,
   .thelia-sidebar.affix-bottom {
